Add test module 'hello.world' using JUnit Jupiter API w/ JPMS support